--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
                     <input type="submit" value="Vind!" />
                 </form>
             </div>
+            <div class="logo"></div>
         </div>
 
         <div class="row">
@@ -33,7 +34,9 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="absolution"><a href="/nieuw" title="Voeg jezelf toe">+</a></div>
+        <div class="absolution">
+            <a href="/new" title="Voeg jezelf toe">+</a>
+        </div>
 
 <script
 			  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
