--- a/static/pplbase.css
+++ b/static/pplbase.css
@@ -106,6 +106,9 @@ body {
     margin: 5px 0 0;
     font-size: 16px;
 }
+.buckets li label {
+    cursor: pointer;
+}
 
 .absolution {
     position: fixed;
