Docker en docker-compose werrkend. next up persistentie van elasticsearchdata

--- a/templates/person-sidebar.html
+++ b/templates/person-sidebar.html
@@ -1,4 +1,4 @@
-            <p>haai, ik staat er naast</p>
+            <p>Fortezza Peoplebase - skill finder</p>
             <p>
                 TODO:
                 <ul><li>vrije tekstevelden terugplaatsen</li>
