--- a/pplbase/templates/home.html
+++ b/pplbase/templates/home.html
@@ -18,7 +18,7 @@
                 <p class="ppl_result">
                     <a href="/view/{{ result.name }}">{{ result.name }}</a>
                     <a href="/update/{{ result.name }}" class="minor">
-                        <img src="/pplbase/static/edit-24px.svg" height="18px" />
+                        <img src="/static/edit-24px.svg" height="18px" />
                     </a>
                 </p>
                 {% endfor %}
