--- a/pplbase/static/pplbase.css
+++ b/pplbase/static/pplbase.css
@@ -46,7 +46,7 @@ body {
     width: 100px;
     height: 50px;
     display: inline-block;
-    background: url('/pplbase/statice/static/fortezza.png') no-repeat;
+    background: url('/static/fortezza.png') no-repeat;
     background-size: contain;
 }
 
