Keywords met spaties correct behandelen, niet splitsen in kleinste delen. Maak de keywords uniek, anders krijge je dubbele voorkomens nooit meer uit. Test ook de Person en PersonFinder class

--- a/pplbase/templates/home.html
+++ b/pplbase/templates/home.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
             else   { q = that.value; }
         }
         else {
-            ar = q.split(' ');
+            ar = {{ qlist|safe }}
             ar.forEach(function(item, index, object) {
                 if (item == that.value) {
                     object.splice(index,1)}
