--- a/pplbase/static/pplbase.css
+++ b/pplbase/static/pplbase.css
@@ -92,6 +92,31 @@ body {
     font-weight: bolder;
 }
 
+.suggestions {
+    display:none;
+    position: relative;
+    display: inline-block;
+}
+
+#q-autocomplete {
+    position: absolute;
+    border: 1px solid red;
+    background: cornsilk;
+    color: #444444;
+    top: 100%;
+    left: 0;
+}
+
+#q-autocomplete div {
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid #d4d4d4;
+}
+#q-autocomplete div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+
 .sidebar {
     background: transparent;
     padding: 10px;
@@ -121,8 +146,8 @@ body {
     width: 50px;
     height: 50px;
     text-align: center;
-
 }
+
 .absolution a {
     text-decoration: none;
     color: white;
