Client-side voorkomen van dubbele namen. Dit lost niet het probleem op dat er op elke manier dubbele namen in kunnen komen ;-p

--- a/pplbase/static/pplbase.css
+++ b/pplbase/static/pplbase.css
@@ -117,6 +117,11 @@ body {
   background-color: #e9e9e9;
 }
 
+.wrong-value {
+    background-color: indianred;
+    color: white;
+}
+
 .sidebar {
     background: transparent;
     padding: 10px;
