--- a/pplbase/templates/person-sidebar.html
+++ b/pplbase/templates/person-sidebar.html
@@ -1,12 +1,6 @@
-            <p>Fortezza Peoplebase - skill finder</p>
+            <h3>Fortezza Peoplebase - skill finder</h3>
             <p>
-                TODO:
-                <ul><li>vrije tekstevelden terugplaatsen</li>
-                    <li>-nog beter, automagisch toevoegen aan 'ANSWERS'</li>
-                    <li>terugvertaling AWS e.d.</li>
-                    <li>buckets opmaken ✔</li>
-                    <li>resultaat display ✔</li>
-                    <li>Verwijderen ✔</li>
-                    <li>Updaten ✔</li>
-                </ul>
+                <em>Vul je naam in en 'tick all the boxes'.</em>
             </p>
+            <p>Het is geen wedstrijd, tik aan wat je (veel) gebruikt en kent. Uiteindelijk, als iedereen dit formulier invult kunnen we snel en eenvoudig een schifting maken van mensen die een bepaalde tehniek beheersen. </p>
+            <p>Ook kan je collega's vinden die mogelijk een antwoord hebben op een <em>&lt;vul techniek in&gt;</em>-vraag waar je mee zit.</p>
