Extra antwoorden toevoegen aan de lijst die de gebruiker gepresenteerd krijgt om uit te kiezen Testen voor endpoint en methodetoegevoegd

--- a/pplbase/templates/person-sidebar.html
+++ b/pplbase/templates/person-sidebar.html
@@ -2,5 +2,5 @@
             <p>
                 <em>Vul je naam in en 'tick all the boxes'.</em>
             </p>
-            <p>Het is geen wedstrijd, tik aan wat je (veel) gebruikt en kent. Uiteindelijk, als iedereen dit formulier invult kunnen we snel en eenvoudig een schifting maken van mensen die een bepaalde tehniek beheersen. </p>
+            <p>Het is geen wedstrijd, tik aan wat je (veel) gebruikt en kent. Uiteindelijk, als iedereen dit formulier invult kunnen we snel en eenvoudig een schifting maken van mensen die een bepaalde techniek beheersen. </p>
             <p>Ook kan je collega's vinden die mogelijk een antwoord hebben op een <em>&lt;vul techniek in&gt;</em>-vraag waar je mee zit.</p>
